[gd_scene load_steps=9 format=2]

[ext_resource path="res://BotonesMenu/NameMain.tscn" type="PackedScene" id=1]
[ext_resource path="res://BotonesMenu/BotonNP.tscn" type="PackedScene" id=3]
[ext_resource path="res://BotonesMenu/BotonOpciones.tscn" type="PackedScene" id=4]
[ext_resource path="res://BotonesMenu/BotonAcercaDe.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/ImagenMenu.png" type="Texture" id=6]
[ext_resource path="res://Scripts/MainScreen.gd" type="Script" id=7]
[ext_resource path="res://BotonesMenu/BotonScores.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.486275, 0, 1 )
border_width_bottom = 5
border_color = Color( 1, 0.486275, 0, 1 )
corner_detail = 12

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.023
anchor_top = 0.05
anchor_right = 0.977
anchor_bottom = 0.95
margin_left = 0.447998
margin_right = -0.448059
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" parent="Menu" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 975.0
margin_bottom = 96.0

[node name="HSeparator" type="HSeparator" parent="Menu"]
margin_top = 100.0
margin_right = 975.0
margin_bottom = 140.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 144.0
margin_right = 975.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="Menu/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 396.0
custom_constants/separation = 40

[node name="Botones" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_left = 44.0
margin_right = 631.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 35
alignment = 1

[node name="BotonNP" parent="Menu/HBoxContainer/Botones" instance=ExtResource( 3 )]
margin_top = 60.0
margin_right = 587.0
margin_bottom = 100.0

[node name="BotonOpciones" parent="Menu/HBoxContainer/Botones" instance=ExtResource( 4 )]
margin_top = 135.0
margin_right = 587.0
margin_bottom = 175.0

[node name="BotonScores" parent="Menu/HBoxContainer/Botones" instance=ExtResource( 8 )]
margin_top = 210.0
margin_right = 587.0
margin_bottom = 250.0
rect_min_size = Vector2( 360, 40 )

[node name="BotonAcercaDe" parent="Menu/HBoxContainer/Botones" instance=ExtResource( 5 )]
margin_top = 285.0
margin_right = 587.0
margin_bottom = 335.0
rect_min_size = Vector2( 360, 50 )

[node name="TextureRect" type="TextureRect" parent="Menu/HBoxContainer"]
margin_left = 635.0
margin_right = 975.0
margin_bottom = 396.0
texture = ExtResource( 6 )
stretch_mode = 6
[connection signal="pressed" from="Menu/HBoxContainer/Botones/BotonNP" to="." method="_on_BotonNP_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/Botones/BotonOpciones" to="." method="_on_BotonOpciones_pressed"]
[connection signal="button_up" from="Menu/HBoxContainer/Botones/BotonScores" to="." method="_on_BotonScores_button_up"]
[connection signal="pressed" from="Menu/HBoxContainer/Botones/BotonAcercaDe" to="." method="_on_BotonAcercaDe_pressed"]
